--- a/AndroidSimple/src/main/res/layout/activity_custom_view.xml
+++ b/AndroidSimple/src/main/res/layout/activity_custom_view.xml
@@ -4,18 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.pinger.repertory.MainActivity">
+    tools:context="com.pinger.repertory.widget.CustomViewActivity">
 
 
     <Button
-        android:id="@+id/btn_widget"
+        android:id="@+id/btn_falling"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:onClick="onClick"
-        android:text="@string/widget_custom"
+        android:text="@string/widget_view_falling_snow"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
