--- a/AndroidSimple/src/main/res/layout/activity_custom_view.xml
+++ b/AndroidSimple/src/main/res/layout/activity_custom_view.xml
@@ -20,4 +20,17 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/btn_banner"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:onClick="onClick"
+        android:text="@string/widget_view_banner"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_falling"/>
+
 </android.support.constraint.ConstraintLayout>
