--- a/AndroidWidget/src/main/res/layout/banner_effect_layout.xml
+++ b/AndroidWidget/src/main/res/layout/banner_effect_layout.xml
@@ -5,7 +5,7 @@
     android:clipChildren="false"
     android:orientation="vertical">
 
-    <com.pinger.widght.banner.LooperViewPager
+    <com.pinger.widget.view.banner.LooperViewPager
         android:id="@+id/mzbanner_vp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
