--- a/AndroidWidget/src/main/res/layout/banner_normal_layout.xml
+++ b/AndroidWidget/src/main/res/layout/banner_normal_layout.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.pinger.widght.banner.LooperViewPager
+    <com.pinger.widget.view.banner.LooperViewPager
         android:id="@+id/mzbanner_vp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
