--- a/sample/src/main/res/layout/activity_custom_view.xml
+++ b/sample/src/main/res/layout/activity_custom_view.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.pinger.repertory.widget.CustomViewActivity">
+    tools:context="com.leibo.repertory.widget.CustomViewActivity">
 
 
     <Button
