update image loader

--- a/sample/src/main/res/layout/activity_banner_view.xml
+++ b/sample/src/main/res/layout/activity_banner_view.xml
@@ -6,6 +6,6 @@
     <com.leibo.baseuilib.view.banner.MZBannerView
         android:id="@+id/banner_view"
         android:layout_width="match_parent"
-        android:layout_height="200dp"/>
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
