--- a/sample/src/main/res/drawable/player_seek_progress.xml
+++ b/sample/src/main/res/drawable/player_seek_progress.xml
@@ -1,28 +1,17 @@
-<?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@android:id/background">
-        <shape>
-            <solid android:color="#7dffffff" />
-            <size android:height="2dp" />
-            <corners android:radius="2dp" />
-        </shape>
-    </item>
+
+    <item
+        android:id="@android:id/background"
+        android:drawable="@drawable/player_seek_progress_dark" />
     <item android:id="@android:id/secondaryProgress">
-        <clip>
-            <shape>
-                <solid android:color="#ffffffff" />
-                <size android:height="2dp" />
-                <corners android:radius="2dp" />
-            </shape>
-        </clip>
+        <scale
+            android:drawable="@drawable/player_seek_progress_secondary"
+            android:scaleWidth="100%" />
     </item>
     <item android:id="@android:id/progress">
-        <clip>
-            <shape>
-                <solid android:color="#FF7000" />
-                <size android:height="2dp" />
-                <corners android:radius="2dp" />
-            </shape>
-        </clip>
+        <scale
+            android:drawable="@drawable/player_seek_progress_primary"
+            android:scaleWidth="100%" />
     </item>
+
 </layer-list>
