--- a/sample/src/main/res/layout/activity_image.xml
+++ b/sample/src/main/res/layout/activity_image.xml
@@ -97,6 +97,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btnNormal" />
 
+
     <android.support.v7.widget.AppCompatButton
         android:id="@+id/btnNormalRound"
         android:layout_width="wrap_content"
@@ -108,6 +109,17 @@
         app:layout_constraintStart_toEndOf="@id/btnNormalCircle"
         app:layout_constraintTop_toBottomOf="@id/btnNormal" />
 
+    <android.support.v7.widget.AppCompatButton
+        android:id="@+id/btnNormalSave"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:text="保存"
+        android:textSize="12sp"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btnNormalCircle" />
+
 
     <android.support.v7.widget.AppCompatButton
         android:id="@+id/btnGif"
@@ -118,8 +130,23 @@
         android:onClick="onClick"
         android:text="Gif图片"
         android:textSize="12sp"
+        app:layout_constraintEnd_toStartOf="@id/btnGifSave"
         app:layout_constraintStart_toEndOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/tvGif" />
+        app:layout_constraintTop_toBottomOf="@+id/tvGif"
+        app:layout_constraintVertical_chainStyle="packed" />
+
+
+    <android.support.v7.widget.AppCompatButton
+        android:id="@+id/btnGifSave"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:onClick="onClick"
+        android:text="保存"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/btnGif"
+        app:layout_constraintTop_toBottomOf="@id/tvGif" />
 
 
 </android.support.constraint.ConstraintLayout>
