--- a/sample/src/main/res/layout/activity_image.xml
+++ b/sample/src/main/res/layout/activity_image.xml
@@ -15,6 +15,24 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
+    <com.leibo.baseuilib.view.progress.CircleProgressView
+        android:id="@+id/progressView"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:progress="0"
+        app:cpv_innerPadding="2dp"
+        app:cpv_outerColor="#E5ffffff"
+        app:cpv_outerSize="1dp"
+        app:cpv_progressNormalColor="@color/transparent"
+        app:cpv_progressReachColor="#E5ffffff"
+        app:cpv_progressStyle="FillInnerArc"
+        app:layout_constraintBottom_toBottomOf="@id/imageView"
+        app:layout_constraintLeft_toLeftOf="@id/imageView"
+        app:layout_constraintRight_toRightOf="@id/imageView"
+        app:layout_constraintTop_toTopOf="@id/imageView" />
+
+
     <View
         android:id="@+id/divider"
         android:layout_width="match_parent"
@@ -116,10 +134,21 @@
         android:onClick="onClick"
         android:text="保存"
         android:textSize="12sp"
+        app:layout_constraintEnd_toStartOf="@id/btnNormalProgress"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btnNormalCircle" />
 
+    <android.support.v7.widget.AppCompatButton
+        android:id="@+id/btnNormalProgress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:text="进度条"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toStartOf="@id/guideline"
+        app:layout_constraintStart_toEndOf="@id/btnNormalSave"
+        app:layout_constraintTop_toBottomOf="@id/btnNormalCircle" />
 
     <android.support.v7.widget.AppCompatButton
         android:id="@+id/btnGif"
