update seekBar display image round.

--- a/sample/src/main/res/values/ids.xml
+++ b/sample/src/main/res/values/ids.xml
@@ -4,5 +4,7 @@
     <item name="recyclerView" type="id" />
     <item name="imageView" type="id" />
     <item name="circleProgressView" type="id" />
+    <item name="seekBar" type="id" />
+    <item name="container" type="id" />
 
 </resources>
