--- a/baseuilib/src/main/res/values/attrs.xml
+++ b/baseuilib/src/main/res/values/attrs.xml
@@ -1,143 +1,156 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+
+    <declare-styleable name="CircleImageView">
+        <attr name="civ_border_width" format="dimension" />
+        <attr name="civ_border_color" format="color" />
+        <attr name="civ_border_overlay" format="boolean" />
+        <attr name="civ_fill_color" format="color" />
+        <attr name="civ_circle_background_color" format="color" />
+    </declare-styleable>
+
+    <declare-styleable name="RoundImageView">
+        <attr name="riv_radius" format="dimension" />
+    </declare-styleable>
+
     <declare-styleable name="MZBannerView">
-        <attr name="open_mz_mode" format="boolean"/>
-        <attr name="canLoop" format="boolean"/>
-        <attr name="indicatorPaddingLeft" format="dimension"/>
-        <attr name="indicatorPaddingRight" format="dimension"/>
-        <attr name="indicatorPaddingTop" format="dimension"/>
-        <attr name="indicatorPaddingBottom" format="dimension"/>
+        <attr name="open_mz_mode" format="boolean" />
+        <attr name="canLoop" format="boolean" />
+        <attr name="indicatorPaddingLeft" format="dimension" />
+        <attr name="indicatorPaddingRight" format="dimension" />
+        <attr name="indicatorPaddingTop" format="dimension" />
+        <attr name="indicatorPaddingBottom" format="dimension" />
         <attr name="indicatorAlign">
-            <enum name="left" value="0"/>
-            <enum name="center" value="1"/>
-            <enum name="right" value="2"/>
+            <enum name="left" value="0" />
+            <enum name="center" value="1" />
+            <enum name="right" value="2" />
         </attr>
-        <attr name="middle_page_cover" format="boolean"/>
+        <attr name="middle_page_cover" format="boolean" />
     </declare-styleable>
 
 
     <declare-styleable name="CircleProgressView">
-        <attr name="cpv_progressNormalColor" format="color"/>
-        <attr name="cpv_progressReachColor" format="color"/>
-        <attr name="cpv_progressTextColor" format="color"/>
-        <attr name="cpv_progressTextSize" format="dimension"/>
-        <attr name="cpv_progressTextOffset" format="dimension"/>
-        <attr name="cpv_progressNormalSize" format="dimension"/>
-        <attr name="cpv_progressReachSize" format="dimension"/>
-        <attr name="cpv_radius" format="dimension"/>
-        <attr name="cpv_progressTextVisible" format="boolean"/>
-        <attr name="cpv_progressStartArc" format="integer"/>
-        <attr name="cpv_progressTextSkewX" format="dimension"/>
-        <attr name="cpv_progressTextPrefix" format="string"/>
-        <attr name="cpv_progressTextSuffix" format="string"/>
-        <attr name="cpv_innerBackgroundColor" format="color"/>
+        <attr name="cpv_progressNormalColor" format="color" />
+        <attr name="cpv_progressReachColor" format="color" />
+        <attr name="cpv_progressTextColor" format="color" />
+        <attr name="cpv_progressTextSize" format="dimension" />
+        <attr name="cpv_progressTextOffset" format="dimension" />
+        <attr name="cpv_progressNormalSize" format="dimension" />
+        <attr name="cpv_progressReachSize" format="dimension" />
+        <attr name="cpv_radius" format="dimension" />
+        <attr name="cpv_progressTextVisible" format="boolean" />
+        <attr name="cpv_progressStartArc" format="integer" />
+        <attr name="cpv_progressTextSkewX" format="dimension" />
+        <attr name="cpv_progressTextPrefix" format="string" />
+        <attr name="cpv_progressTextSuffix" format="string" />
+        <attr name="cpv_innerBackgroundColor" format="color" />
         <attr name="cpv_progressStyle" format="enum">
-            <enum name="Normal" value="0"/>
-            <enum name="FillInner" value="1"/>
-            <enum name="FillInnerArc" value="2"/>
+            <enum name="Normal" value="0" />
+            <enum name="FillInner" value="1" />
+            <enum name="FillInnerArc" value="2" />
         </attr>
-        <attr name="cpv_innerProgressColor" format="color"/>
-        <attr name="cpv_innerPadding" format="dimension"/>
-        <attr name="cpv_outerColor" format="color"/>
-        <attr name="cpv_outerSize" format="dimension"/>
-        <attr name="cpv_reachCapRound" format="boolean"/>
+        <attr name="cpv_innerProgressColor" format="color" />
+        <attr name="cpv_innerPadding" format="dimension" />
+        <attr name="cpv_outerColor" format="color" />
+        <attr name="cpv_outerSize" format="dimension" />
+        <attr name="cpv_reachCapRound" format="boolean" />
     </declare-styleable>
 
 
     <!-- 以下是重用attr的正确姿势,一切为了在布局中可以自动提示-->
     <!-- 圆角矩形背景色 -->
-    <attr name="rv_backgroundColor" format="color"/>
+    <attr name="rv_backgroundColor" format="color" />
     <!-- 圆角矩形背景色press -->
-    <attr name="rv_backgroundPressColor" format="color"/>
+    <attr name="rv_backgroundPressColor" format="color" />
     <!-- 圆角弧度,单位dp-->
-    <attr name="rv_cornerRadius" format="dimension"/>
+    <attr name="rv_cornerRadius" format="dimension" />
     <!-- 圆角弧度,单位dp-->
-    <attr name="rv_strokeWidth" format="dimension"/>
+    <attr name="rv_strokeWidth" format="dimension" />
     <!-- 圆角边框颜色-->
-    <attr name="rv_strokeColor" format="color"/>
+    <attr name="rv_strokeColor" format="color" />
     <!-- 圆角边框颜色press -->
-    <attr name="rv_strokePressColor" format="color"/>
+    <attr name="rv_strokePressColor" format="color" />
     <!-- 文字颜色press-->
-    <attr name="rv_textPressColor" format="color"/>
+    <attr name="rv_textPressColor" format="color" />
     <!-- 圆角弧度是高度一半-->
-    <attr name="rv_isRadiusHalfHeight" format="boolean"/>
+    <attr name="rv_isRadiusHalfHeight" format="boolean" />
     <!-- 圆角矩形宽高相等,取较宽高中大值-->
-    <attr name="rv_isWidthHeightEqual" format="boolean"/>
+    <attr name="rv_isWidthHeightEqual" format="boolean" />
     <!-- 圆角弧度,单位dp,TopLeft-->
-    <attr name="rv_cornerRadius_TL" format="dimension"/>
+    <attr name="rv_cornerRadius_TL" format="dimension" />
     <!-- 圆角弧度,单位dp,TopRight-->
-    <attr name="rv_cornerRadius_TR" format="dimension"/>
+    <attr name="rv_cornerRadius_TR" format="dimension" />
     <!-- 圆角弧度,单位dp,BottomLeft-->
-    <attr name="rv_cornerRadius_BL" format="dimension"/>
+    <attr name="rv_cornerRadius_BL" format="dimension" />
     <!-- 圆角弧度,单位dp,BottomRight-->
-    <attr name="rv_cornerRadius_BR" format="dimension"/>
+    <attr name="rv_cornerRadius_BR" format="dimension" />
     <!-- 是否有Ripple效果,api21+有效-->
-    <attr name="rv_isRippleEnable" format="boolean"/>
+    <attr name="rv_isRippleEnable" format="boolean" />
 
     <declare-styleable name="RoundTextView">
-        <attr name="rv_backgroundColor"/>
-        <attr name="rv_backgroundPressColor"/>
-        <attr name="rv_cornerRadius"/>
-        <attr name="rv_strokeWidth"/>
-        <attr name="rv_strokeColor"/>
-        <attr name="rv_strokePressColor"/>
-        <attr name="rv_textPressColor"/>
-        <attr name="rv_isRadiusHalfHeight"/>
-        <attr name="rv_isWidthHeightEqual"/>
-        <attr name="rv_cornerRadius_TL"/>
-        <attr name="rv_cornerRadius_TR"/>
-        <attr name="rv_cornerRadius_BL"/>
-        <attr name="rv_cornerRadius_BR"/>
-        <attr name="rv_isRippleEnable"/>
+        <attr name="rv_backgroundColor" />
+        <attr name="rv_backgroundPressColor" />
+        <attr name="rv_cornerRadius" />
+        <attr name="rv_strokeWidth" />
+        <attr name="rv_strokeColor" />
+        <attr name="rv_strokePressColor" />
+        <attr name="rv_textPressColor" />
+        <attr name="rv_isRadiusHalfHeight" />
+        <attr name="rv_isWidthHeightEqual" />
+        <attr name="rv_cornerRadius_TL" />
+        <attr name="rv_cornerRadius_TR" />
+        <attr name="rv_cornerRadius_BL" />
+        <attr name="rv_cornerRadius_BR" />
+        <attr name="rv_isRippleEnable" />
     </declare-styleable>
 
     <declare-styleable name="RoundLinearLayout">
-        <attr name="rv_backgroundColor"/>
-        <attr name="rv_backgroundPressColor"/>
-        <attr name="rv_cornerRadius"/>
-        <attr name="rv_strokeWidth"/>
-        <attr name="rv_strokeColor"/>
-        <attr name="rv_strokePressColor"/>
-        <attr name="rv_isRadiusHalfHeight"/>
-        <attr name="rv_isWidthHeightEqual"/>
-        <attr name="rv_cornerRadius_TL"/>
-        <attr name="rv_cornerRadius_TR"/>
-        <attr name="rv_cornerRadius_BL"/>
-        <attr name="rv_cornerRadius_BR"/>
-        <attr name="rv_isRippleEnable"/>
+        <attr name="rv_backgroundColor" />
+        <attr name="rv_backgroundPressColor" />
+        <attr name="rv_cornerRadius" />
+        <attr name="rv_strokeWidth" />
+        <attr name="rv_strokeColor" />
+        <attr name="rv_strokePressColor" />
+        <attr name="rv_isRadiusHalfHeight" />
+        <attr name="rv_isWidthHeightEqual" />
+        <attr name="rv_cornerRadius_TL" />
+        <attr name="rv_cornerRadius_TR" />
+        <attr name="rv_cornerRadius_BL" />
+        <attr name="rv_cornerRadius_BR" />
+        <attr name="rv_isRippleEnable" />
     </declare-styleable>
 
     <declare-styleable name="RoundRelativeLayout">
-        <attr name="rv_backgroundColor"/>
-        <attr name="rv_backgroundPressColor"/>
-        <attr name="rv_cornerRadius"/>
-        <attr name="rv_strokeWidth"/>
-        <attr name="rv_strokeColor"/>
-        <attr name="rv_strokePressColor"/>
-        <attr name="rv_isRadiusHalfHeight"/>
-        <attr name="rv_isWidthHeightEqual"/>
-        <attr name="rv_cornerRadius_TL"/>
-        <attr name="rv_cornerRadius_TR"/>
-        <attr name="rv_cornerRadius_BL"/>
-        <attr name="rv_cornerRadius_BR"/>
-        <attr name="rv_isRippleEnable"/>
+        <attr name="rv_backgroundColor" />
+        <attr name="rv_backgroundPressColor" />
+        <attr name="rv_cornerRadius" />
+        <attr name="rv_strokeWidth" />
+        <attr name="rv_strokeColor" />
+        <attr name="rv_strokePressColor" />
+        <attr name="rv_isRadiusHalfHeight" />
+        <attr name="rv_isWidthHeightEqual" />
+        <attr name="rv_cornerRadius_TL" />
+        <attr name="rv_cornerRadius_TR" />
+        <attr name="rv_cornerRadius_BL" />
+        <attr name="rv_cornerRadius_BR" />
+        <attr name="rv_isRippleEnable" />
     </declare-styleable>
 
     <declare-styleable name="RoundFrameLayout">
-        <attr name="rv_backgroundColor"/>
-        <attr name="rv_backgroundPressColor"/>
-        <attr name="rv_cornerRadius"/>
-        <attr name="rv_strokeWidth"/>
-        <attr name="rv_strokeColor"/>
-        <attr name="rv_strokePressColor"/>
-        <attr name="rv_isRadiusHalfHeight"/>
-        <attr name="rv_isWidthHeightEqual"/>
-        <attr name="rv_cornerRadius_TL"/>
-        <attr name="rv_cornerRadius_TR"/>
-        <attr name="rv_cornerRadius_BL"/>
-        <attr name="rv_cornerRadius_BR"/>
-        <attr name="rv_isRippleEnable"/>
+        <attr name="rv_backgroundColor" />
+        <attr name="rv_backgroundPressColor" />
+        <attr name="rv_cornerRadius" />
+        <attr name="rv_strokeWidth" />
+        <attr name="rv_strokeColor" />
+        <attr name="rv_strokePressColor" />
+        <attr name="rv_isRadiusHalfHeight" />
+        <attr name="rv_isWidthHeightEqual" />
+        <attr name="rv_cornerRadius_TL" />
+        <attr name="rv_cornerRadius_TR" />
+        <attr name="rv_cornerRadius_BL" />
+        <attr name="rv_cornerRadius_BR" />
+        <attr name="rv_isRippleEnable" />
     </declare-styleable>
 
 </resources>
