--- a/sample/src/main/res/layout/activity_player_main.xml
+++ b/sample/src/main/res/layout/activity_player_main.xml
@@ -5,22 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.fungo.playergo.VideoPlayer
-        android:id="@+id/normalPlayer"
+    <com.fungo.player.FunPlayer
+        android:id="@+id/funPlayer"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintDimensionRatio="w,9:16"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-
-    <com.fungo.playergo.VideoPlayer
-        android:id="@+id/livePlayer"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
