--- a/baselib/src/main/res/layout/mz_banner_normal_layout.xml
+++ b/baselib/src/main/res/layout/mz_banner_normal_layout.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.fungo.baseuilib.view.banner.CustomViewPager
+    <com.fungo.baselib.view.banner.CustomViewPager
         android:id="@+id/mzbanner_vp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
