--- a/baselib/src/main/res/layout/mz_banner_effect_layout.xml
+++ b/baselib/src/main/res/layout/mz_banner_effect_layout.xml
@@ -5,7 +5,7 @@
     android:clipChildren="false"
     android:orientation="vertical">
 
-    <com.fungo.baseuilib.view.banner.CustomViewPager
+    <com.fungo.baselib.view.banner.CustomViewPager
         android:id="@+id/mzbanner_vp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
