--- a/sample/src/main/res/layout/activity_image_main.xml
+++ b/sample/src/main/res/layout/activity_image_main.xml
@@ -16,7 +16,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.fungo.baseuilib.view.progress.CircleProgressView
+    <com.fungo.baselib.view.progress.CircleProgressView
         android:id="@id/circleProgressView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
