--- a/sample/src/main/res/layout/activity_page2.xml
+++ b/sample/src/main/res/layout/activity_page2.xml
@@ -26,5 +26,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:navGraph="@navigation/page_navigation"
         app:layout_constraintTop_toBottomOf="@+id/toolBar" />
 </android.support.constraint.ConstraintLayout>
