--- a/baselib/src/main/res/values/styles.xml
+++ b/baselib/src/main/res/values/styles.xml
@@ -7,5 +7,11 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-    
+
+
+    <style name="BaseAppTheme.NoActionBar.SwipeBack" parent="BaseAppTheme">
+        <item name="android:windowBackground">@android:color/white</item>
+        <item name="android:windowIsTranslucent">true</item>
+    </style>
+
 </resources>
