--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -1,53 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:overScrollMode="ifContentScrolls"
-    android:scrollbars="vertical">
+    android:layout_height="match_parent">
 
-
-    <LinearLayout
-        android:padding="12dp"
+    <View
+        android:id="@+id/statusBar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="25dp"/>
 
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:onClick="onWidget"
-            android:text="@string/widget_custom" />
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:onClick="onRecycler"
-            android:text="@string/recycler_page" />
+    <Button
+        android:onClick="onHost"
+        android:layout_width="match_parent"
+        android:text="Fragment主页"
+        android:layout_height="wrap_content" />
 
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:onClick="onVideoPlayer"
-            android:text="@string/video_player" />
 
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:onClick="onImageManager"
-            android:text="@string/image_loader" />
-
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:onClick="onSocial"
-            android:text="@string/social" />
-
-
-    </LinearLayout>
-
-
-</ScrollView>
+</LinearLayout>
