--- a/baselib/src/main/res/values/styles.xml
+++ b/baselib/src/main/res/values/styles.xml
@@ -9,9 +9,20 @@
     </style>
 
 
-    <style name="BaseAppTheme.NoActionBar.SwipeBack" parent="BaseAppTheme">
-        <item name="android:windowBackground">@android:color/white</item>
+    <!--滑动返回的Activity主题-->
+    <style name="BaseAppTheme.SwipeBack" parent="BaseAppTheme">
+        <item name="android:windowBackground">@color/grey_f7</item>
         <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowAnimationStyle">@style/BaseAppTheme.Right.Animation</item>
     </style>
+
+    <!-- 右侧弹出和返回的主题-->
+    <style name="BaseAppTheme.Right.Animation" mce_bogus="1" parent="@android:style/Animation.Activity">
+        <item name="android:activityOpenEnterAnimation">@anim/anim_slide_in_right</item>
+        <item name="android:activityCloseExitAnimation">@anim/anim_slide_out_right</item>
+        <item name="android:activityOpenExitAnimation">@anim/anim_no</item>
+        <item name="android:activityCloseEnterAnimation">@anim/anim_no</item>
+    </style>
+
 
 </resources>
