--- a/baselib/src/main/res/layout/base_layout_progress.xml
+++ b/baselib/src/main/res/layout/base_layout_progress.xml
@@ -8,9 +8,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="稍等"
+        android:text="@string/base_waiting"
         android:textColor="@color/black"
-        android:textSize="24sp"
+        android:textSize="20sp"
         android:textStyle="bold" />
 
 
@@ -21,15 +21,15 @@
         android:gravity="center_vertical">
 
         <ProgressBar
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_width="42dp"
+            android:layout_height="42dp" />
 
         <TextView
             android:id="@+id/tvLoadingMessage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="24dp"
-            android:text="正在加载中..."
-            android:textSize="20sp" />
+            android:layout_marginStart="24dp"
+            android:text="@string/base_loading"
+            android:textSize="16sp" />
     </LinearLayout>
 </LinearLayout>
