--- a/baselib/src/main/res/values/styles.xml
+++ b/baselib/src/main/res/values/styles.xml
@@ -25,4 +25,156 @@
     </style>
 
 
+    <!--Transparent-->
+    <style name="BaseAppTheme.Transparent" parent="BaseAppTheme">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:colorBackgroundCacheHint">@null</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowAnimationStyle">@style/BaseAppTheme.Right.Animation</item>
+    </style>
+
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+
+    <!--系统的主题-->
+    <!--系统的主题-->
+    <!--系统的主题-->
+
+    <!--blueTheme-->
+    <style name="BlueTheme" parent="BaseAppTheme">
+        <item name="colorPrimary">@color/colorBluePrimary</item>
+        <item name="colorPrimaryDark">@color/colorBluePrimaryDark</item>
+        <item name="colorAccent">@color/colorBluePrimaryDark</item>
+        <item name="background">@color/grey_f7</item>
+    </style>
+
+    <!--redTheme-->
+    <style name="RedTheme" parent="BaseAppTheme.Transparent">
+        <item name="colorPrimary">@color/colorRedPrimary</item>
+        <item name="colorPrimaryDark">@color/colorRedPrimaryDark</item>
+        <item name="colorAccent">@color/colorRedPrimaryDark</item>
+        <item name="background">@color/grey_f7</item>
+    </style>
+
+    <!--brownTheme-->
+    <style name="BrownTheme" parent="BaseAppTheme.Transparent">
+        <item name="colorPrimary">@color/colorBrownPrimary</item>
+        <item name="colorPrimaryDark">@color/colorBrownPrimaryDark</item>
+        <item name="colorAccent">@color/colorBrownPrimaryDark</item>
+        <item name="background">@color/grey_f7</item>
+    </style>
+
+    <!--greenTheme-->
+    <style name="GreenTheme" parent="BaseAppTheme.Transparent">
+        <item name="colorPrimary">@color/colorGreenPrimary</item>
+        <item name="colorPrimaryDark">@color/colorGreenPrimaryDark</item>
+        <item name="colorAccent">@color/colorGreenPrimaryDark</item>
+        <item name="background">@color/grey_f7</item>
+    </style>
+
+    <!--purpleTheme-->
+    <style name="PurpleTheme" parent="BaseAppTheme.Transparent">
+        <item name="colorPrimary">@color/colorPurplePrimary</item>
+        <item name="colorPrimaryDark">@color/colorPurplePrimaryDark</item>
+        <item name="colorAccent">@color/colorPurplePrimaryDark</item>
+        <item name="background">@color/grey_f7</item>
+    </style>
+
+    <!--tealTheme-->
+    <style name="TealTheme" parent="BaseAppTheme.Transparent">
+        <item name="colorPrimary">@color/colorTealPrimary</item>
+        <item name="colorPrimaryDark">@color/colorTealPrimaryDark</item>
+        <item name="colorAccent">@color/colorTealPrimaryDark</item>
+        <item name="background">@color/grey_f7</item>
+    </style>
+
+    <!--pinkTheme-->
+    <style name="PinkTheme" parent="BaseAppTheme.Transparent">
+        <item name="colorPrimary">@color/colorPinkPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPinkPrimaryDark</item>
+        <item name="colorAccent">@color/colorPinkPrimaryDark</item>
+        <item name="background">@color/grey_f7</item>
+    </style>
+
+    <!--deepPurpleTheme-->
+    <style name="DeepPurpleTheme" parent="BaseAppTheme.Transparent">
+        <item name="colorPrimary">@color/colorDeepPurplePrimary</item>
+        <item name="colorPrimaryDark">@color/colorDeepPurplePrimaryDark</item>
+        <item name="colorAccent">@color/colorDeepPurplePrimaryDark</item>
+        <item name="background">@color/grey_f7</item>
+    </style>
+
+    <!--orange-->
+    <style name="OrangeTheme" parent="BaseAppTheme.Transparent">
+        <item name="colorPrimary">@color/colorOrangePrimary</item>
+        <item name="colorPrimaryDark">@color/colorOrangePrimaryDark</item>
+        <item name="colorAccent">@color/colorOrangePrimaryDark</item>
+        <item name="background">@color/grey_f7</item>
+    </style>
+
+
+    <!--indigo-->
+    <style name="IndigoTheme" parent="BaseAppTheme.Transparent">
+        <item name="colorPrimary">@color/colorIndigoPrimary</item>
+        <item name="colorPrimaryDark">@color/colorIndigoPrimaryDark</item>
+        <item name="colorAccent">@color/colorIndigoPrimaryDark</item>
+        <item name="background">@color/grey_f7</item>
+    </style>
+
+
+    <!--cyan-->
+    <style name="CyanTheme" parent="BaseAppTheme.Transparent">
+        <item name="colorPrimary">@color/colorCyanPrimary</item>
+        <item name="colorPrimaryDark">@color/colorCyanPrimaryDark</item>
+        <item name="colorAccent">@color/colorCyanPrimaryDark</item>
+        <item name="background">@color/grey_f7</item>
+    </style>
+
+
+    <style name="BlackTheme" parent="BaseAppTheme.Transparent">
+        <item name="colorPrimary">@color/colorBlackPrimary</item>
+        <item name="colorPrimaryDark">@color/colorBlackPrimaryDark</item>
+        <item name="colorAccent">@color/colorBlackPrimaryDark</item>
+        <item name="background">@color/grey_f7</item>
+    </style>
+
+
+    <!--lightGreen-->
+    <style name="LightGreenTheme" parent="BaseAppTheme.Transparent">
+        <item name="colorPrimary">@color/colorLightGreenPrimary</item>
+        <item name="colorPrimaryDark">@color/colorLightGreenPrimaryDark</item>
+        <item name="colorAccent">@color/colorLightGreenPrimaryDark</item>
+        <item name="background">@color/grey_f7</item>
+    </style>
+
+
+    <!--lime-->
+    <style name="LimeTheme" parent="BaseAppTheme.Transparent">
+        <item name="colorPrimary">@color/colorLimePrimary</item>
+        <item name="colorPrimaryDark">@color/colorLimePrimaryDark</item>
+        <item name="colorAccent">@color/colorLimePrimaryDark</item>
+        <item name="background">@color/grey_f7</item>
+    </style>
+
+    <!--deepOrange-->
+    <style name="DeepOrangeTheme" parent="BaseAppTheme.Transparent">
+        <item name="colorPrimary">@color/colorDeepOrangePrimary</item>
+        <item name="colorPrimaryDark">@color/colorDeepOrangePrimaryDark</item>
+        <item name="colorAccent">@color/colorDeepOrangePrimaryDark</item>
+        <item name="background">@color/grey_f7</item>
+    </style>
+
+
+    <!--blueGrey-->
+    <style name="BlueGreyTheme" parent="BaseAppTheme.Transparent">
+        <item name="colorPrimary">@color/colorBlueGreyPrimary</item>
+        <item name="colorPrimaryDark">@color/colorBlueGreyPrimaryDark</item>
+        <item name="colorAccent">@color/colorBlueGreyPrimaryDark</item>
+        <item name="background">@color/grey_f7</item>
+    </style>
+
+
 </resources>
